Update style.css for skillsn background

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@
         }
 
         .skill {
-            background-color: #d2b154;
+            background-color: #348aa9;
             color: rgb(19, 19, 19);
             padding: 0.5rem 1rem;
             border-radius: 20px;
